--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -182,6 +182,7 @@
     "social_pinterest_link": "https:\/\/www.pinterest.com\/shopify",
     "social_instagram_link": "https:\/\/instagram.com\/shopify",
     "social_tumblr_link": "",
+    "social_tiktok_link": "https:\/\/tiktok.com\/shopify",
     "social_snapchat_link": "",
     "social_youtube_link": "https:\/\/www.youtube.com\/user\/shopify",
     "social_vimeo_link": "",
@@ -295,6 +296,7 @@
     "checkout_accent_color": "#006eff",
     "checkout_button_color": "#006eff",
     "checkout_error_color": "#e32c2b",
+    "share_tiktok": true,
     "video_mute": true,
     "type_base_size": "14px",
     "enable_rtl": "false",
@@ -534,13 +536,22 @@
       "footer-1": {
         "type": "footer-1",
         "blocks": {
-          "1595696762386": {
+          "ff93e06a-30be-40b3-a91d-eda48ab56fb9": {
+            "type": "newsletter",
+            "settings": {
+              "title": "sign up for updates from The Origami Way",
+              "subheading": "<p>Promotions, new products and sales. Directly to your inbox.<\/p>",
+              "enablesocial": true,
+              "width": "50%"
+            }
+          },
+          "text_HqKhAr": {
             "type": "text",
             "settings": {
-              "widthlogofooter": 0,
-              "title": "",
-              "text": "<div class=\"mt-0 mb-5\">\n        <img class=\"lybn-lazyload lazyload\" alt=\"logo\" data-src=\"https:\/\/f0c1ec-6b.myshopify.com\/cdn\/shop\/t\/7\/assets\/TheOrigamiWay-logo-dark.png\" width=\"130\">\n      <\/div>\n<p class=\"pr-lg-5\">Combining comfort and style for conscious women living an active lifestyle.<\/p>",
-              "width": "33%"
+              "widthlogofooter": 130,
+              "title": "Company",
+              "text": "<div>\n<a href=\"#\">About Us<\/a>\n<\/div>\n<div>\n<a href=\"#\">Careers<\/a>\n<\/div>\n<div>\n<a href=\"#\">Track My Order<\/a>\n<div>\n<div>\n<a href=\"#\">Give 10%, Get 10%<\/a>\n<\/div>\n<\/div>\n<\/div>",
+              "width": "16%"
             }
           },
           "71f9ea60-c2de-4f37-91f9-1ba23dd7b985": {
@@ -548,7 +559,7 @@
             "settings": {
               "widthlogofooter": 130,
               "title": "My account",
-              "text": "<div>\n<a href=\"#\">Create Account<\/a>\n<\/div>\n<div>\n<a href=\"#\">Accounts<\/a>\n<\/div>\n<div>\n<a href=\"#\">Track My Order<\/a>\n<div>\n<div>\n<a href=\"#\">Give 10%, Get 10%<\/a>\n<div><\/div>\n<\/div>\n<\/div>\n<\/div>",
+              "text": "<div>\n<a href=\"#\">Create Account<\/a>\n<\/div>\n<div>\n<a href=\"#\">Accounts<\/a>\n<\/div>\n<div>\n<a href=\"#\">Track My Order<\/a>\n<div>\n<div>\n<a href=\"#\">Give 10%, Get 10%<\/a>\n<\/div>\n<\/div>\n<\/div>",
               "width": "16%"
             }
           },
@@ -560,40 +571,13 @@
               "text": "<p>Sustainability<\/p>",
               "width": "16%"
             }
-          },
-          "1567410176792": {
-            "type": "menu",
-            "settings": {
-              "link_list": "footer",
-              "width": "16%"
-            }
-          },
-          "ff93e06a-30be-40b3-a91d-eda48ab56fb9": {
-            "type": "newsletter",
-            "disabled": true,
-            "settings": {
-              "title": "Stay in touch",
-              "subheading": "<p>Promotions, new products and sales. Directly to your inbox.<\/p>",
-              "enablesocial": false,
-              "width": "33%"
-            }
-          },
-          "d9066774-6c0c-4d07-bd33-67d69160f474": {
-            "type": "social",
-            "settings": {
-              "title": "Follow us",
-              "align": "left",
-              "width": "16%"
-            }
           }
         },
         "block_order": [
-          "1595696762386",
-          "71f9ea60-c2de-4f37-91f9-1ba23dd7b985",
-          "655703c7-72ee-48c1-aea6-61c3f611d088",
-          "1567410176792",
           "ff93e06a-30be-40b3-a91d-eda48ab56fb9",
-          "d9066774-6c0c-4d07-bd33-67d69160f474"
+          "text_HqKhAr",
+          "71f9ea60-c2de-4f37-91f9-1ba23dd7b985",
+          "655703c7-72ee-48c1-aea6-61c3f611d088"
         ],
         "settings": {
           "setwidth": "container",
@@ -2151,7 +2135,7 @@
           "mix_1": "#262626",
           "mix_2": "#c0c0c0",
           "text_cl": "#ffffff",
-          "cart_bg": "#c99a5c",
+          "cart_bg": "#ff5f6d",
           "cart_cl": "#ffffff"
         }
       },
@@ -2205,7 +2189,7 @@
           "mix_1": "#262626",
           "mix_2": "#c0c0c0",
           "text_cl": "#ffffff",
-          "cart_bg": "#c99a5c",
+          "cart_bg": "#ff5f6d",
           "cart_cl": "#ffffff"
         }
       },
@@ -2259,7 +2243,7 @@
           "mix_1": "#262626",
           "mix_2": "#c0c0c0",
           "text_cl": "#ffffff",
-          "cart_bg": "#c99a5c",
+          "cart_bg": "#ff5f6d",
           "cart_cl": "#ffffff"
         }
       },
@@ -2342,7 +2326,7 @@
           "mix_1": "#262626",
           "mix_2": "#c0c0c0",
           "text_cl": "#ffffff",
-          "cart_bg": "#c99a5c",
+          "cart_bg": "#ff5f6d",
           "cart_cl": "#ffffff"
         }
       },
@@ -2599,7 +2583,7 @@
           "mix_1": "#262626",
           "mix_2": "#c0c0c0",
           "text_cl": "#ffffff",
-          "cart_bg": "#c99a5c",
+          "cart_bg": "#ff5f6d",
           "cart_cl": "#ffffff"
         }
       },
@@ -2653,7 +2637,7 @@
           "mix_1": "#262626",
           "mix_2": "#c0c0c0",
           "text_cl": "#ffffff",
-          "cart_bg": "#c99a5c",
+          "cart_bg": "#ff5f6d",
           "cart_cl": "#ffffff"
         }
       },
@@ -2707,7 +2691,7 @@
           "mix_1": "#262626",
           "mix_2": "#c0c0c0",
           "text_cl": "#ffffff",
-          "cart_bg": "#c99a5c",
+          "cart_bg": "#ff5f6d",
           "cart_cl": "#ffffff"
         }
       },
@@ -4141,18 +4125,21 @@
         "blocks": {
           "165591926672fd6044-1": {
             "type": "image",
+            "disabled": true,
             "settings": {
               "image_link": "https:\/\/www.instagram.com\/p\/B2Gd5A-pL0s\/"
             }
           },
           "2ea8fbde-53d0-4204-b121-fd317d780008": {
             "type": "image",
+            "disabled": true,
             "settings": {
               "image_link": "https:\/\/www.instagram.com\/p\/B7ZKrySp03E\/"
             }
           },
           "b484ea73-4277-4674-b36b-b57d9f7e96c1": {
             "type": "image",
+            "disabled": true,
             "settings": {
               "image_link": "https:\/\/www.instagram.com\/p\/BucN0sCAtfi\/"
             }
@@ -4166,18 +4153,21 @@
           },
           "165591926672fd6044-2": {
             "type": "image",
+            "disabled": true,
             "settings": {
               "image_link": "https:\/\/www.instagram.com\/p\/CCEXXsyp_qL\/"
             }
           },
           "c09c8b81-b924-4d98-8ed6-4b0b3ba3c667": {
             "type": "image",
+            "disabled": true,
             "settings": {
               "image_link": ""
             }
           },
           "1a1964df-b11e-4d42-9674-0f4dd7b69663": {
             "type": "image",
+            "disabled": true,
             "settings": {
               "image_link": "https:\/\/www.instagram.com\/p\/CZhF5U1KmTj\/"
             }
@@ -4192,6 +4182,7 @@
           "c09c8b81-b924-4d98-8ed6-4b0b3ba3c667",
           "1a1964df-b11e-4d42-9674-0f4dd7b69663"
         ],
+        "disabled": true,
         "settings": {
           "animation": "",
           "paddingsection": "0px 0px 0px 0px",
