--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -785,6 +785,7 @@
           "pnewletter_time_delay": 3,
           "pnewletter_time": 10,
           "pnewletter_background": "#ffffff",
+          "pnewletter_bgimage": "shopify:\/\/shop_images\/PQPzPEOXpaTQf7t_1e4ec648-85db-4aa1-9890-965316cc6015.webp",
           "pnewletter_title": "10% Off your first order",
           "pnewletter_title_cl": "#000000",
           "pnewletter_description": "<p>Get 10% off your first purchase by joining our mailing list,\nand receive some of the best deals possible..<\/p>",
@@ -3862,41 +3863,6 @@
           "scrollbar": false
         }
       },
-      "162266004920c5a7b3": {
-        "type": "advanced-content",
-        "blocks": {
-          "247d6711-35d9-4278-b492-1491815fce2d": {
-            "type": "html",
-            "settings": {
-              "fullhtml": false,
-              "code": "<h3 class=\"anim-loop-left white-space text-uppercase\">JElle - Les Echos - The Sunday Times - British Vogue - Eurowoman - Financial Times - The New York Times - WWD - Business of Fashion - Elle - Les Echos - The Sunday Times - British Vogue - Eurowoman - Financial Times - The New York Times - WWD - Business of Fashion - Elle - Les Echos - The Sunday Times - British Vogue - Eurowoman - Financial Times - The New York Times - WWD - Business of Fashion - WWD - Business of Fashion<\/h3>",
-              "width": "100%",
-              "align": "center"
-            }
-          }
-        },
-        "block_order": [
-          "247d6711-35d9-4278-b492-1491815fce2d"
-        ],
-        "settings": {
-          "animation": "fade-up",
-          "paddingsection": "88px 0px 88px 0px",
-          "paddingmobile": "32px 0px 32px 0px",
-          "marginsection": "0px 0px 0px 0px",
-          "marginmobile": "0px 0px 0px 0px",
-          "zindex": "0",
-          "bgsection": "#fefefe",
-          "rangebg": 0,
-          "bgbefore": "rgba(0,0,0,0)",
-          "e_size": "cover",
-          "e_repeat": "no-repeat",
-          "title_top": "",
-          "title": "",
-          "des": "",
-          "setwidth": "full",
-          "padding": true
-        }
-      },
       "16227412644167f80e": {
         "type": "backgroundvideo",
         "disabled": true,
@@ -3951,22 +3917,12 @@
               "description": "We use materials like sustainably -forested",
               "icon": "<svg version=\"1.1\" id=\"Capa_1\" xmlns=\"http:\/\/www.w3.org\/2000\/svg\" x=\"0px\" y=\"0px\" viewbox=\"0 0 486.926 486.926\" style=\"enable-background:new 0 0 486.926 486.926;\" xmlns:xlink=\"http:\/\/www.w3.org\/1999\/xlink\" xml:space=\"preserve\"> <g> \t<path d=\"M462.8,181.564c-12.3-10.5-27.7-16.2-43.3-16.2h-15.8h-56.9h-32.4v-75.9c0-31.9-9.3-54.9-27.7-68.4 \t\tc-29.1-21.4-69.2-9.2-70.9-8.6c-5,1.6-8.4,6.2-8.4,11.4v84.9c0,27.7-13.2,51.2-39.3,69.9c-19.5,14-39.4,20.1-41.5,20.8l-2.9,0.7 \t\tc-4.3-7.3-12.2-12.2-21.3-12.2H24.7c-13.6,0-24.7,11.1-24.7,24.7v228.4c0,13.6,11.1,24.7,24.7,24.7h77.9c7.6,0,14.5-3.5,19-8.9 \t\tc12.5,13.3,30.2,21.6,49.4,21.6h65.9h6.8h135.1c45.9,0,75.2-24,80.4-66l26.9-166.9C489.8,221.564,480.9,196.964,462.8,181.564z \t\t M103.2,441.064c0,0.4-0.3,0.7-0.7,0.7H24.7c-0.4,0-0.7-0.3-0.7-0.7v-228.4c0-0.4,0.3-0.7,0.7-0.7h77.9c0.4,0,0.7,0.3,0.7,0.7 \t\tv228.4H103.2z M462.2,241.764l-26.8,167.2c0,0.1,0,0.3-0.1,0.5c-3.7,29.9-22.7,45.1-56.6,45.1H243.6h-6.8h-65.9 \t\tc-21.3,0-39.8-15.9-43.1-36.9c-0.1-0.7-0.3-1.4-0.5-2.1v-191.6l5.2-1.2c0.2,0,0.3-0.1,0.5-0.1c1-0.3,24.7-7,48.6-24 \t\tc32.7-23.2,49.9-54.3,49.9-89.9v-75.3c10.4-1.7,28.2-2.6,41.1,7c11.8,8.7,17.8,25.2,17.8,49v87.8c0,6.6,5.4,12,12,12h44.4h56.9 \t\th15.8c9.9,0,19.8,3.7,27.7,10.5C459,209.864,464.8,225.964,462.2,241.764z\"><\/path> <\/g> <g> <\/g> <g> <\/g> <g> <\/g> <g> <\/g> <g> <\/g> <g> <\/g> <g> <\/g> <g> <\/g> <g> <\/g> <g> <\/g> <g> <\/g> <g> <\/g> <g> <\/g> <g> <\/g> <g> <\/g> <\/svg>"
             }
-          },
-          "4aafc34b-6693-43af-852a-f7cce47cef66": {
-            "type": "service",
-            "settings": {
-              "bgblock": "rgba(0,0,0,0)",
-              "title": "<span class=\"h5\"> Free Return<\/span>",
-              "description": "Made from durable polyrattan",
-              "icon": "<svg version=\"1.1\" id=\"Capa_1\" xmlns=\"http:\/\/www.w3.org\/2000\/svg\" x=\"0px\" y=\"0px\" viewbox=\"0 0 486.025 486.025\" style=\"enable-background:new 0 0 486.025 486.025;\" xmlns:xlink=\"http:\/\/www.w3.org\/1999\/xlink\" xml:space=\"preserve\"> <g> \t<g> \t\t<path d=\"M420.725,85.413c-42.1-42.1-98.1-65.3-157.6-65.3c-60.6,0-117.3,23.9-159.6,67.3c-4.6,4.7-4.5,12.3,0.2,17 \t\t\tc4.7,4.6,12.3,4.5,17-0.2c37.8-38.7,88.3-60,142.4-60c109.7-0.1,198.9,89.1,198.9,198.8s-89.2,198.9-198.9,198.9 \t\t\ts-198.8-89.2-198.8-198.9v-2.5l19.7,19.8c2.3,2.3,5.4,3.5,8.5,3.5s6.1-1.2,8.5-3.5c4.7-4.7,4.7-12.3,0-17l-40.2-40.3 \t\t\tc-4.7-4.7-12.3-4.7-17,0l-40.3,40.3c-4.7,4.7-4.7,12.3,0,17s12.3,4.7,17,0l19.8-19.8v2.5c0,59.5,23.2,115.5,65.3,157.6 \t\t\ts98.1,65.3,157.6,65.3s115.5-23.2,157.6-65.3c42-42.1,65.2-98.1,65.2-157.6S462.825,127.513,420.725,85.413z\"><\/path> \t\t<path d=\"M263.125,103.613c-6.6,0-12,5.4-12,12v29.1h-7.6c-30.3,0-55,24.7-55,55s24.7,55,55,55h39.2c17.1,0,31,13.9,31,31 \t\t\ts-13.9,31-31,31h-70.5c-6.6,0-12,5.4-12,12s5.4,12,12,12h38.9v29.5c0,6.6,5.4,12,12,12s12-5.4,12-12v-29.5h8c0.1,0,0.2,0,0.3,0 \t\t\tc30-0.4,54.3-24.9,54.3-55c0-30.3-24.7-55-55-55h-39.2c-17.1,0-31-13.9-31-31s13.9-31,31-31h69.2c6.6,0,12-5.4,12-12 \t\t\ts-5.4-12-12-12h-37.6v-29.1C275.125,109.013,269.825,103.613,263.125,103.613z\"><\/path> \t<\/g> <\/g> <g> <\/g> <g> <\/g> <g> <\/g> <g> <\/g> <g> <\/g> <g> <\/g> <g> <\/g> <g> <\/g> <g> <\/g> <g> <\/g> <g> <\/g> <g> <\/g> <g> <\/g> <g> <\/g> <g> <\/g> <\/svg>"
-            }
           }
         },
         "block_order": [
           "1622833097e2ca621b-0",
           "1622833097e2ca621b-1",
-          "1622833097e2ca621b-2",
-          "4aafc34b-6693-43af-852a-f7cce47cef66"
+          "1622833097e2ca621b-2"
         ],
         "settings": {
           "animation": "fade-up",
@@ -3984,10 +3940,10 @@
           "title": "",
           "des": "",
           "setwidth": "container",
-          "arrows": false,
+          "arrows": true,
           "draggable": true,
           "dots": true,
-          "infinite": true
+          "infinite": false
         }
       },
       "1654361006e7ffcb15": {
@@ -3996,7 +3952,7 @@
           "1654361006e7ffcb15-0": {
             "type": "banner",
             "settings": {
-              "image": "shopify:\/\/shop_images\/person-with-black-helmet-waits-their-turn-in-city-intersection.jpg",
+              "image": "shopify:\/\/shop_images\/7a1ad63ac23c845e06d99148d45170f9.jpg",
               "width": "6",
               "description": "<h2 class=\"my-2\">Light Traverl <\/h2><p>A smooth leather.<\/p>",
               "bg_color": "#fefefe",
@@ -4016,7 +3972,7 @@
           "1654361006e7ffcb15-1": {
             "type": "banner",
             "settings": {
-              "image": "shopify:\/\/shop_images\/slick-summer-men-s-fashion.jpg",
+              "image": "shopify:\/\/shop_images\/man-holding-his-leather-travel-bag.jpg",
               "width": "6",
               "description": "<h2 class=\"my-2\">Smart Carry-on<\/h2><p>Marked by detail accents.<\/p>",
               "bg_color": "#fefefe",
@@ -4106,7 +4062,7 @@
             "type": "html",
             "settings": {
               "fullhtml": false,
-              "code": "<div class=\" pr-md-5 mr-md-5 pt-5\">\n<span class=\"subtop\"> limited edition<\/span>\n<h2 class=\"mt-3 mb-5\">New ! Supper<br> Summer<\/h2>\n<a href=\"\/collections\/new-arrivals\" class=\"btn btn-theme\">Read more<\/a>\n<div class=\"mt-lg-5 pt-5 pl-lg-5 text-right\">\n<img class=\"ml-lg-5 lybn-lazyload lazyload\" alt=\"HTML builder image\" data-src=\"https:\/\/cdn.shopify.com\/s\/files\/1\/0031\/3072\/0369\/files\/11bn8.jpg?v=1656756232\">\n<\/div>\n<\/div>",
+              "code": "<div class=\" pr-md-5 mr-md-5 pt-5\">\n<span class=\"subtop\"> limited edition<\/span>\n<h2 class=\"mt-3 mb-5\">New ! Supper<br> Summer Sale<\/h2>\n<a href=\"\/collections\/new-arrivals\" class=\"btn btn-theme\">Shop now<\/a>\n\n<\/div>",
               "width": "50%",
               "align": "auto"
             }
@@ -4116,7 +4072,7 @@
             "settings": {
               "width": "50%",
               "align": "auto",
-              "image": "shopify:\/\/shop_images\/person-stands-by-a-river-while-chatting-on-their-phone.jpg",
+              "image": "shopify:\/\/shop_images\/Custom-Letters-Carrry-On-PU-Leather-Garment-Bag-For-Women-Large-Size-Pu-Foldable-Duffle-Suit_9590d681-aa09-421d-a9c2-2926170a023b.webp",
               "image_link": ""
             }
           }
@@ -4357,7 +4313,8 @@
             "type": "image_block",
             "settings": {
               "pos_image": 72,
-              "e_image": "right"
+              "e_image": "right",
+              "image": "shopify:\/\/shop_images\/086d2dc79afb0ce4d6d83438a58eb2b1.jpg"
             }
           },
           "165666881930c22f5f-1": {
@@ -4365,7 +4322,7 @@
             "settings": {
               "bgtext": "#fefefe",
               "title": "",
-              "text": "<div class=\"pl-lg-5 ml-lg-5\">\n<span class=\"subtop\">MATCH COLORS<\/span>\n<h2 class=\"mt-2 mb-4\">Hyper wearable Fashion <\/h2>\n<p>Pair large text with an image to give focus to your chosen product, collection, or blog post. Add details on availability, style, or even provide a review.<\/p>\n<a href=\"#\" class=\"mt-5 btn btn-theme\"> Shop now<\/a>\n<\/div>",
+              "text": "<div class=\"pl-lg-5 ml-lg-5\">\n<span class=\"subtop\">Woman collection<\/span>\n<h2 class=\"mt-2 mb-4\">Hyper wearable Fashion <\/h2>\n<p>Elevate your everyday ensemble with our stylish and versatile women's bags, blending fashion-forward designs with practical functionality.<\/p>\n<a href=\"#\" class=\"mt-5 btn btn-theme\"> Shop now<\/a>\n<\/div>",
               "align": "left"
             }
           }
@@ -4560,7 +4517,8 @@
           "subtitle_color": "#ffffff",
           "button": "discover now",
           "link": "",
-          "parrallax_enable": false
+          "parrallax_enable": false,
+          "image": "shopify:\/\/shop_images\/man-holding-a-leather-bag-on-a-set-of-stairs.jpg"
         }
       },
       "16569015684db1f3ea": {
@@ -4600,6 +4558,7 @@
       },
       "1656905606471f0922": {
         "type": "featured-articles",
+        "disabled": true,
         "settings": {
           "animation": "fade-up",
           "paddingsection": "120px 0px 60px 0px",
@@ -4666,7 +4625,6 @@
     },
     "content_for_index": [
       "1654361006e7ffcb15",
-      "162266004920c5a7b3",
       "1622833097e2ca621b",
       "16558932809b8bdcd6",
       "1656870916c9656b37",
