moved description accordion to under the favorites and moved the guuide size next to size, fixed an error related to the favorites button under buy now

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -1,6 +1,6 @@
 {
   "current": {
-    "header": "header-3",
+    "header": "header-4",
     "slideshow": "slideshow-4",
     "footer": "footer-1",
     "pnewsletter": "pnewsletter-1",
@@ -167,9 +167,9 @@
     "apmenuitem_eihtml_5": false,
     "apmenuitem_ihtml_5": "",
     "apmenuitem_chtml_5": "",
-    "color_breadcrumbs": "#6c757d",
+    "color_breadcrumbs": "#222222",
     "color_breadcrumbs_active": "#fb1e1e",
-    "bg_breadcrumb": "#f7f1f0",
+    "bg_breadcrumb": "#e4e4e4",
     "limit_ranger": 0,
     "show_title_breadcumbs": false,
     "align_bread": "center",
@@ -273,7 +273,7 @@
     "cookie_url": "shopify:\/\/pages\/html-template",
     "cookie_url_text": "Learn More",
     "cookie_ok": "Got it!",
-    "show_multiple_currencies": true,
+    "show_multiple_currencies": false,
     "list_currencies": "EUR,AUD,GBP,JPY,INR",
     "cartdraw": false,
     "image_404": "",
@@ -569,9 +569,9 @@
         ],
         "settings": {
           "setwidth": "container",
-          "background": "#423f3f",
+          "background": "#000000",
           "border_headfooter": "rgba(0,0,0,0)",
-          "background_bot": "#423f3f",
+          "background_bot": "#000000",
           "border-copryright": "#333333",
           "text": "#f7f5f0",
           "title": "#f7f5f0",
@@ -651,7 +651,7 @@
           "waitlist": true,
           "product_selector": "radio",
           "sizeguide_enable": true,
-          "sizeguide_title": "Size guide",
+          "sizeguide_title": "Size Guide",
           "sizeguide_page": "sizeguide",
           "fake_view_enable": true,
           "fake_view_min": 12,
@@ -762,7 +762,7 @@
           "enable_transparent": false,
           "hover_transparent": false,
           "enable_white": false,
-          "enable_sticky": true,
+          "enable_sticky": false,
           "background": "#ffffff",
           "textcolor": "#222222",
           "linkcolor": "#222222",
@@ -1446,16 +1446,16 @@
           "enable_transparent": false,
           "hover_transparent": false,
           "enable_white": false,
-          "enable_sticky": true,
+          "enable_sticky": false,
           "enable_dropdownfull": true,
           "enabletopbar": true,
           "enable_login": true,
-          "enable_social": true,
+          "enable_social": false,
           "enablemoney": false,
-          "topbartext": "Free shipping on all orders over $100",
-          "topbarbg": "#f8bb8b",
+          "topbartext": "Free shipping on all orders over $35",
+          "topbarbg": "#000000",
           "topborderbg": "rgba(0,0,0,0)",
-          "textcolor-top": "#333333",
+          "textcolor-top": "#ffffff",
           "textcolor-tophover": "#fb1e1e",
           "background": "#ffffff",
           "textcolor": "#423f3f",
@@ -1467,7 +1467,7 @@
           "menudroptext": "#666666",
           "menudropbg": "#ffffff",
           "menudropborder": "#f1f1f1",
-          "align_menu": "center",
+          "align_menu": "left",
           "text_topbar": "<ul class=\"list-inline\">\n    <li class=\"list-inline-item\"><a href=\"#\">Strore<\/a><\/li>\n    <li class=\"list-inline-item\"><a href=\"#jsPopupNewsletter\" data-toggle=\"modal\">Subscribe<\/a><\/li>\n<\/ul>",
           "enablesidebar": true,
           "sidebar_heart": false,
@@ -2103,7 +2103,7 @@
           "variant_available_enable": true,
           "product_selector": "radio",
           "sizeguide_enable": true,
-          "sizeguide_title": "Size guide",
+          "sizeguide_title": "Size Guide",
           "sizeguide_page": "sizeguide",
           "fake_view_enable": true,
           "fake_view_min": 12,
@@ -2157,7 +2157,7 @@
           "variant_available_enable": true,
           "product_selector": "select",
           "sizeguide_enable": true,
-          "sizeguide_title": "Size guide",
+          "sizeguide_title": "Size Guide",
           "sizeguide_page": "sizeguide",
           "fake_view_enable": true,
           "fake_view_min": 12,
@@ -2211,7 +2211,7 @@
           "variant_available_enable": true,
           "product_selector": "radio",
           "sizeguide_enable": true,
-          "sizeguide_title": "Size guide",
+          "sizeguide_title": "Size Guide",
           "sizeguide_page": "sizeguide",
           "fake_view_enable": true,
           "fake_view_min": 12,
@@ -2294,7 +2294,7 @@
           "variant_available_enable": true,
           "product_selector": "radio",
           "sizeguide_enable": true,
-          "sizeguide_title": "Size guide",
+          "sizeguide_title": "Size Guide",
           "sizeguide_page": "sizeguide",
           "fake_view_enable": true,
           "fake_view_min": 12,
@@ -2551,7 +2551,7 @@
           "variant_available_enable": true,
           "product_selector": "radio",
           "sizeguide_enable": true,
-          "sizeguide_title": "Size guide",
+          "sizeguide_title": "Size Guide",
           "sizeguide_page": "sizeguide",
           "fake_view_enable": true,
           "fake_view_min": 12,
@@ -2605,7 +2605,7 @@
           "variant_available_enable": true,
           "product_selector": "radio",
           "sizeguide_enable": true,
-          "sizeguide_title": "Size guide",
+          "sizeguide_title": "Size Guide",
           "sizeguide_page": "",
           "fake_view_enable": true,
           "fake_view_min": 12,
@@ -2659,7 +2659,7 @@
           "variant_available_enable": true,
           "product_selector": "radio",
           "sizeguide_enable": false,
-          "sizeguide_title": "Size guide",
+          "sizeguide_title": "Size Guide",
           "sizeguide_page": "",
           "fake_view_enable": true,
           "fake_view_min": 12,
@@ -3834,7 +3834,7 @@
             "type": "html",
             "settings": {
               "fullhtml": false,
-              "code": "<h3 class=\"anim-loop-left white-space text-uppercase\">JElle - Les Echos - The Sunday Times - British Vogue - Eurowoman - Financial Times - The New York Times - WWD - Business of Fashion - Elle - Les Echos - The Sunday Times - British Vogue - Eurowoman - Financial Times - The New York Times - WWD - Business of Fashion - Elle - Les Echos - The Sunday Times - British Vogue - Eurowoman - Financial Times - The New York Times - WWD - Business of Fashion - WWD - Business of Fashion<\/h3>",
+              "code": "<h3 class=\"anim-loop-left white-space text-uppercase\">JElle - Les Echos - The Sunday Times - British Vogue - Financial Times - The New York Times  Business of Fashion - Elle - Les Echos - The Sunday Times - British Vogue - Financial Times - The New York Times - Business of Fashion - Elle - Les Echos - The Sunday Times - British Vogue - Financial Times - The New York Times - Business of Fashion - Business of Fashion<\/h3>",
               "width": "100%",
               "align": "center"
             }
@@ -3929,7 +3929,7 @@
           "paddingmobile": "24px 0px 40px 0px",
           "marginsection": "0px 0px 0px 0px",
           "marginmobile": "0px 0px 0px 0px",
-          "bgsection": "#f7f5f0",
+          "bgsection": "#e4e4e4",
           "iconcolor": "#222222",
           "titlecolor": "#222222",
           "subcolor": "#423f3f",
@@ -4563,7 +4563,7 @@
           "paddingmobile": "60px 0px 60px 0px",
           "marginsection": "0px 0px 0px 0px",
           "marginmobile": "0px 0px 0px 0px",
-          "bgsection": "#f9f9f9",
+          "bgsection": "#e4e4e4",
           "title_top": "newsletter",
           "title": "Stay in touch.",
           "des": "Subscribe to get special offers, free giveaways, and once-in-a-lifetime deals.",
@@ -4616,7 +4616,15 @@
       "162237804441268bd5",
       "165690588456226989",
       "165591926672fd6044"
-    ]
+    ],
+    "blocks": {
+      "1143683040400472741": {
+        "type": "shopify:\/\/apps\/trustoo-io-reviews\/blocks\/trustoo-review-switch\/c8f15077-6475-4e86-ad06-b66038d5ba2c",
+        "disabled": false,
+        "settings": {
+        }
+      }
+    }
   },
   "presets": {
     "Classic": {
@@ -5065,7 +5073,7 @@
             "variant_available_enable": true,
             "product_selector": "radio",
             "sizeguide_enable": true,
-            "sizeguide_title": "Size guide",
+            "sizeguide_title": "Size Guide",
             "sizeguide_page": "size-guide",
             "fake_view_enable": true,
             "fake_view_min": 12,
