removed recently viewd popup because it has a bug - might fix later

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -440,7 +440,7 @@
       "recently-viewed": {
         "type": "recently-viewed",
         "settings": {
-          "enable": true,
+          "enable": false,
           "title": "Recently viewed",
           "limit": 6
         }
